[package]
name = "locktick"
version = "0.1.0"
edition = "2021"
authors = ["ljedrz <ljedrz@gmail.com>"]
description = ""
license = "CC0-1.0"
repository = "https://github.com/ljedrz/locktick"
documentation = "https://docs.rs/locktick"
readme = "README.md"
categories = ["concurrency", "development-tools"]
keywords = ["lock", "profiling", "utility"]

[features]
default = ["std"]
parking_lot = ["dep:parking_lot"]
std = []
tracing = ["dep:tracing"]
test = []

[dependencies]
backtrace = "0.3"
rand_core = "0.6"
rand_xorshift = "0.3"
simple_moving_average = "1"
parking_lot = { version = "0.12", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
locktick = { path = ".", default-features = false, features = ["test"] }
